<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:padding="15dp"
    tools:context=".LoginScreenActivity"
    tools:ignore="SpeakableTextPresentCheck">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/incioSesionTitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TituloSesion"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintVertical_chainStyle="spread"
            app:layout_constraintBottom_toTopOf="@+id/loginUserLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/loginUserLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/editUsuario"
            app:helperText="@string/helper"
            app:layout_constraintBottom_toTopOf="@+id/loginPasswordLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/incioSesionTitulo">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/loginUserField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="1"
                android:maxLines="1"
                tools:ignore="TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/loginPasswordLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/editClave"
            app:helperText="@string/helper"
            app:layout_constraintBottom_toTopOf="@+id/botonInicioSesion"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginUserLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/loginPasswordField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:lines="1"
                android:maxLines="1"
                tools:ignore="TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/botonInicioSesion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btonInicio"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/botonNuevoUsuario"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginPasswordLayout" />

        <Button
            android:id="@+id/botonNuevoUsuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btonNuevoUsuario"
            app:layout_constraintBottom_toBottomOf="@+id/botonInicioSesion"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/botonInicioSesion"
            app:layout_constraintTop_toTopOf="@+id/botonInicioSesion" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>